# smb-decomp

./: AGENTS.md  CMakeLists.txt  Makefile  README.md  failed_compile.txt  libmkb.js  package.json  smb1_stagedef_format.txt
build-wasm/: CMakeCache.txt  Makefile  cmake_install.cmake
include/: ball_sim.h  camera_sim.h  dolphin.h  libmkb.h  math.h  ppcintrinsic.h  stage_loader.h  stddef.h  stdio.h  stdlib.h  wchar.h  world.h
include/dolphin/: os.h
include/musyx/: musyx.h
src/: avdisp.h  background.c  background.h  ball.h  functions.h  light.h  lzs_decompress.c  mathutil.h  preview.h  rend_efc.h  sprite.h  stage.c  stage.h  window.h
src/lib/: ball.c  ball_sim.c  camera.c  camera_sim.c  event.c  global_state.c  globals.c  host_load.c  host_os.c  input.c  input_host.c  item.c  item_coin.c  item_sim.c  lzs_decompress.c  obj_collision.c  stage_anim.c  stage_loader.c  stcoli.c  stobj.c  stobj_goal.c  stobj_sim.c  world.c  world_sim.c
tests/: build_wasm.js  webdemo.js  webdemo_sim.js
tools/: build_wasm.sh  stagedef_swap.py
webdemo/: STAGE002.lz  index.html  libmkb.js  libmkb.wasm  main.js
